--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,6 +6,8 @@ on:
     branches: [main]
 jobs:
   build:
+    env:
+      CI: true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,3 +17,5 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm install
+      - name: Test code
+        run: npm test
